--- a/7_datasets_and_dataloader.ipynb
+++ b/7_datasets_and_dataloader.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f2267fff",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "178 45\n"
+      "178 45\n",
+      "Epoch 1/2, Step 1/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 2/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 3/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 4/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 5/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 6/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 7/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 8/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 9/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 10/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 11/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 12/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 13/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 14/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 15/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 16/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 17/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 18/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 19/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 20/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 21/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 22/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 23/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 24/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 25/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 26/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 27/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 28/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 29/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 30/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 31/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 32/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 33/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 34/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 35/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 36/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 37/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 38/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 39/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 40/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 41/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 42/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 43/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 44/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 1/2, Step 45/45, Inputs torch.Size([2, 13])\n",
+      "Epoch 2/2, Step 1/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 2/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 3/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 4/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 5/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 6/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 7/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 8/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 9/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 10/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 11/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 12/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 13/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 14/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 15/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 16/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 17/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 18/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 19/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 20/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 21/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 22/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 23/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 24/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 25/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 26/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 27/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 28/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 29/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 30/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 31/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 32/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 33/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 34/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 35/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 36/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 37/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 38/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 39/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 40/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 41/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 42/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 43/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 44/45, Inputs torch.Size([4, 13])\n",
+      "Epoch 2/2, Step 45/45, Inputs torch.Size([2, 13])\n"
      ]
     }
    ],
